--- a/app/etudiants.html
+++ b/app/etudiants.html
@@ -37,15 +37,13 @@
 <body>
   <header class="header header--main-page">
     <div class="header__left">
-      <a class="link link--menu">Menu</a>
+      <a class="header__elem link link--menu">Menu</a>
     </div>
     <div class="header__center">
-      <h1 class="page-title">
-        Professeurs
-      </h1>
+      <h1 class="page-title">Étudiants</h1>
     </div>
     <div class="header__right">
-      <a href="notification.html">
+      <a class="header__elem header__notification" href="notification.html">
         <img src="images/icn-bell.svg" alt="Notification">
       </a>
     </div>
@@ -101,78 +99,6 @@
       <li class="card profile profile--here">
         <div class="profile__picture">
           <img class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
-        </div>
-        <div class="details">
-          <p class="profile__name">Louis Hoebregts</p>
-          <p class="profile__mail">louis.hoebregts@profs.heaj.be</p>
-        </div>
-      </li>
-      <li class="card profile">
-        <div class="profile__picture">
-          <img  class="profile__img" src="images/profile/professeur/porfile-louis-hoebregts.jpg" alt="Photo de profile de Louis Hoebregts">
         </div>
         <div class="details">
           <p class="profile__name">Louis Hoebregts</p>
