--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
           <img class="logo logo--title" src="images/logo-heaj.svg" alt="Logo HEAJ">
         </h1>
       </div>
-      <div class="header__rigth"></div>
+      <div class="header__right"></div>
     </header>
 
     <main>
@@ -66,8 +66,6 @@
         </form>
       </section>
     </main>
-
-    <div class="container"></div>
 
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
